k8s-configs/staging/ingress/frontend-posts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-posts-ingress
  namespace: development
spec:
  tls:
    - secretName: frontend-staging-posts-com-tls
      hosts:
        - frontend.staging.posts.com
  rules:
  - host: frontend.staging.posts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-internal-service
            port: 
              number: 80
  ingressClassName: nginx

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata: 
  name: nginx
  namespace: staging
spec:
  controller: k8s.io/ingress-nginx
